styling for login and signup

--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   "author": "groove developers",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
